--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -3,6 +3,10 @@
 @import './variables.less';
 @import './mixin.less';
 
+#nprogress .bar {
+    background: @primary-color !important;
+}
+
 .text-align-right{
     text-align: right;
 }
