--- a/src/layouts/IndexLayout/css/index.less
+++ b/src/layouts/IndexLayout/css/index.less
@@ -297,7 +297,7 @@
 
         .indexlayout-right-main {
 
-            .indexlayout-main-conent {
+            .layout-main-conent {
                 margin: 24px;
                 position: relative;
             }
